hvantran/project-management#108 Migrate job manager to use elasticsearch instead of postgres